--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2"
+    "enzyme-adapter-react-16": "^1.15.2",
+    "use-reducer-logger": "^1.0.1"
   }
 }
