--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,8 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.1.6",
+    "express-graphql": "^0.9.0",
+    "graphql": "^14.6.0",
     "mongoose": "^5.8.11",
     "validator": "^12.2.0"
   },
