--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,11 +6,14 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-scripts": "3.4.0",
+    "apollo-boost": "^0.4.7",
     "axios": "^0.19.2",
-    "d3": "^5.15.0"
+    "d3": "^5.15.0",
+    "graphql": "^14.6.0",
+    "react": "^16.12.0",
+    "react-apollo": "^3.1.3",
+    "react-dom": "^16.12.0",
+    "react-scripts": "3.4.0"
   },
   "proxy": "http://localhost:5000",
   "scripts": {
