--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "backend": "npm start --prefix backend",
     "frontend": "npm start --prefix frontend",
-    "dev": "concurrently \"npm run backend\" \"npm run frontend\""
+    "dev": "concurrently \"npm run backend\" \"npm run frontend\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
+
   },
   "author": "",
   "license": "ISC",
