--- a/package.json
+++ b/package.json
@@ -4,14 +4,31 @@
   "description": "",
   "scripts": {
     "backend": "npm start --prefix backend",
+    "start": "nodemon app.js",
     "frontend": "npm start --prefix frontend",
-    "dev": "concurrently \"npm run backend\" \"npm run frontend\"",
+    "dev": "concurrently \"npm run start\" \"npm run frontend\"",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
-
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "concurrently": "^5.1.0"
+    "concurrently": "^5.1.0",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "express-fileupload": "^1.1.6",
+    "express-graphql": "^0.9.0",
+    "graphql": "^14.6.0",
+    "mongoose": "^5.8.11",
+    "validator": "^12.2.0"
+  },
+  "main": "app.js",
+  "devDependennpm run servercies": {
+    "nodemon": "^2.0.2"
+  },
+  "devDependencies": {
+    "lodash": "^4.17.15",
+    "mongodb": "^3.5.2",
+    "nodemon": "^2.0.2"
   }
 }
