--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "node app.js",
+    "start": "concurrently \"node app.js\" \"npm run frontend\"",
     "frontend": "npm start --prefix frontend",
-    "dev": "concurrently \"npm run start\" \"npm run frontend\"",
+    "backend": "nodemon app.js",
+    "dev": "concurrently \"npm run backend\" \"npm run frontend\"",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
   },
   "author": "",
